--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,10 +30,10 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-#theme: minima
-theme: jekyll-theme-h2o-ac
-plugins:
-  - jekyll-feed
+theme: minima
+#theme: jekyll-theme-h2o-ac
+#plugins:
+#  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
